Refactored Snake.java